-
Bug
-
Resolution: Fixed
-
Blocker
-
Lustre 2.4.0
-
3
-
7001
This issue was created by maloo for sarah <sarah@whamcloud.com>
This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/3fa2a912-85b2-11e2-9f8d-52540035b04c.
The sub-test test_1 failed with the following error:
test failed to respond and timed out
client console shows:
18:47:35:Lustre: DEBUG MARKER: == racer test 1: racer on clients: client-22-ib,client-23-ib.lab.whamcloud.com DURATION=900 == 18:47:28 (1362451648) 18:47:35:Lustre: DEBUG MARKER: DURATION=900 MDSCOUNT=1 /usr/lib64/lustre/tests/racer/racer.sh /mnt/lustre2/racer 18:47:35:Lustre: DEBUG MARKER: DURATION=900 MDSCOUNT=1 /usr/lib64/lustre/tests/racer/racer.sh /mnt/lustre/racer 18:51:19:LustreError: 8649:0:(file.c:2601:ll_inode_revalidate_fini()) lustre: revalidate FID [0x200000bd0:0x9095:0x0] error: rc = -116 18:56:24:LustreError: 28058:0:(lcommon_cl.c:821:ccc_io_advance()) ASSERTION( cio->cui_tot_nrsegs >= cio->cui_nrsegs ) failed: 18:56:24:LustreError: 28058:0:(lcommon_cl.c:821:ccc_io_advance()) LBUG 18:56:24:Pid: 28058, comm: cat 18:56:24: 18:56:24:Call Trace: 18:56:24: [<ffffffffa03fe895>] libcfs_debug_dumpstack+0x55/0x80 [libcfs] 18:56:24: [<ffffffffa03fee97>] lbug_with_loc+0x47/0xb0 [libcfs] 18:56:24: [<ffffffffa1264c0e>] ccc_io_advance+0x11e/0x190 [lustre] 18:56:24: [<ffffffffa05a96d6>] cl_io_rw_advance+0x66/0x150 [obdclass] 18:56:24: [<ffffffffa05ae602>] cl_io_loop+0xe2/0x1b0 [obdclass] 18:56:24: [<ffffffffa1215323>] ll_file_io_generic+0x223/0x570 [lustre] 18:56:24: [<ffffffffa12157af>] ll_file_aio_read+0x13f/0x2c0 [lustre] 18:56:25: [<ffffffffa121635c>] ll_file_read+0x16c/0x2a0 [lustre] 18:56:25: [<ffffffff81176cb5>] vfs_read+0xb5/0x1a0 18:56:25: [<ffffffff81176df1>] sys_read+0x51/0x90 18:56:25: [<ffffffff8100b072>] system_call_fastpath+0x16/0x1b 18:56:25: 18:56:25:Kernel panic - not syncing: LBUG 18:56:25:Pid: 28058, comm: cat Not tainted 2.6.32-279.19.1.el6.x86_64 #1 18:56:25:Call Trace: 18:56:25: [<ffffffff814e9541>] ? panic+0xa0/0x168 18:56:25: [<ffffffffa03feeeb>] ? lbug_with_loc+0x9b/0xb0 [libcfs] 18:56:25: [<ffffffffa1264c0e>] ? ccc_io_advance+0x11e/0x190 [lustre] 18:56:25: [<ffffffffa05a96d6>] ? cl_io_rw_advance+0x66/0x150 [obdclass] 18:56:25: [<ffffffffa05ae602>] ? cl_io_loop+0xe2/0x1b0 [obdclass] 18:56:25: [<ffffffffa1215323>] ? ll_file_io_generic+0x223/0x570 [lustre] 18:56:25: [<ffffffffa12157af>] ? ll_file_aio_read+0x13f/0x2c0 [lustre] 18:56:25: [<ffffffffa121635c>] ? ll_file_read+0x16c/0x2a0 [lustre] 18:56:25: [<ffffffff81176cb5>] ? vfs_read+0xb5/0x1a0 18:56:25: [<ffffffff81176df1>] ? sys_read+0x51/0x90 18:56:26: [<ffffffff8100b072>] ? system_call_fastpath+0x16/0x1b 18:56:26:Initializing cgroup subsys cpuset 18:56:26:Initializing cgroup subsys cpu